[package]
name = "life_progress_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# git = "https://github.com/liwuhou/lifespan-crawler.git" 
lifespan_crawler = { path = "../lifespan-crawler" }
anyhow = "*"
chrono = "*"